hphp/test/slow/class_constant/abstract_const6.php.expectf

Fatal error: Couldn't find constant I::X in %stest/slow/class_constant/abstract_const6.php on line 6
